# pipclaw

./: .env.example  .gitignore  README.md  launch-yazi.ps1  pipclaw-yazi.bat  pyproject.toml
src/pipclaw/: main.py
src/pipclaw/api/: client.py  types.py
src/pipclaw/commands/: slash.py
src/pipclaw/project/: manager.py
src/pipclaw/runtime/: conversation.py  permissions.py  session.py
src/pipclaw/tools/: bash.py  executor.py  file_ops.py  search.py  specs.py  video.py
src/pipclaw/tui/: app.py  chat_panel.py  file_panel.py  preview.py  status_bar.py  styles.tcss
tests/: test_session.py  test_tools.py
